# SpiralSmoother

./: CMakeLists.txt  README.md
include/: SpiralDerive.hpp  SpiralSmoother.hpp  ipopt_interface.hpp
src/: SpiralSmoother.cpp  ipopt_interface.cpp  main.cpp
